Fix dark mode on new car form

--- a/src/app/new-trip/new-trip.component.sass
+++ b/src/app/new-trip/new-trip.component.sass
@@ -175,10 +175,8 @@ h2
     top: 50%
     left: 50%
     transform: translate(-50%, -50%)
-    background-color: white
-    -moz-box-shadow: 0 0 30px -10px #777
-    -webkit-box-shadow: 0 0 30px -10px #777
-    box-shadow: 0 0 30px -10px #777
+    background-color: #282828
+    border: 1px solid #404040
     padding: 0 35px
     padding-top: 10px
     padding-bottom: 35px
@@ -192,6 +190,7 @@ h2
         margin-top: 20px
         font-weight: 500
         margin-bottom: 5px
+        color: #787878
     
     .form-group
         display: block
